--- a/src/style.scss
+++ b/src/style.scss
@@ -10,3 +10,10 @@ body{
     font-family: Montserrat, sans-serif;
     background-color: #f5fdff;
 }
+.navbar{
+    padding: 1rem 0;
+}
+.container{
+    width: 80%;
+    margin: 0 auto;
+}
